# deamon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  auth.rs  config.rs  constants.rs  event.rs  file_event.rs  files.rs  hash.rs  helpers.rs  logs.rs  main.rs  server.rs  watchers.rs
src/event/: event_processing.rs  file_event.rs
src/events/: event_processing.rs  file_event.rs
src/server/: api.rs  socket.rs  types.rs
