[package]
name = "sherry-demon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
ftp = "3.0"
home = "0.5.5"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
notify-debouncer-full = "0.3.1"
notify = { version = "6.1.1", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
path-clean = "1.0.1"
parking_lot = { version = "0.12.1", features = ["serde"] }
serde-diff = "0.4.1"
serde_json_diff = "0.2.0"
seahash = "4.1.0"
log4rs = "1.3.0"
log = "0.4.20"
chrono = "0.4.34"
regex = "1.10.3"
tokio = { version = "1", features = ["full"] }
