[package]
name = "sherry-demon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
ftp = "3.0"
home = "0.5"
serde = { version = "1", features = ["rc"] }
serde_json = "1"
notify-debouncer-full = "0.3"
notify = { version = "6.1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
path-clean = "1.0.1"
parking_lot = { version = "0.12", features = ["serde"] }
serde-diff = "0.4.1"
seahash = "4.1.0"
log4rs = "1.3"
log = "0.4"
chrono = "0.4"
regex = "1"
tokio = { version = "1.36.0", features = ["full"] }
glob = "0.3"
tokio-tungstenite = { version = "0.21" }
reqwest = { version = "0.12.4", features = ["stream", "multipart", "json"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
anyhow = "1.0.80"
